--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
-  "name": "react-fipc",
   "version": "0.3.0",
   "description": "simple implementation of dependency injection in react",
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ParomovEvg/react-fipc.git"
@@ -15,69 +13,65 @@
     "dependency-injection",
     "currying"
   ],
-  "author": "Evgeny Paromov",
-  "license": "MIT",
   "bugs": {
     "url": "https://github.com/ParomovEvg/react-fipc/issues"
   },
   "homepage": "https://github.com/ParomovEvg/react-fipc#readme",
-  "scripts": {
-    "build": "tsc",
-    "postbuild": "node scripts/postbuild.js",
-    "eslint": "npx npx eslint --ext .ts src",
-    "test": "jest",
-    "test-watch": "jest --watch",
-    "typecheck": "tsc --noEmit --skipLibCheck",
-    "release": "standard-version",
-    "release:patch": "npm run release -- --release-as patch",
-    "release:minor": "npm run release -- --release-as minor",
-    "release:major": "npm run release -- --release-as major",
-    "test:ci": "npm run test && npm run coveralls",
-    "coveralls": "cat coverage/lcov.info | coveralls",
-    "publish": "npm run build && npm publish ./lib"
+  "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
+  "files": [
+    "dist",
+    "src"
+  ],
+  "engines": {
+    "node": ">=10"
   },
-  "jest": {
-    "transform": {
-      ".(ts|tsx)": "ts-jest"
-    },
-    "testRegex": "src/.+\\.test\\.ts$",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js"
-    ],
-    "collectCoverage": true
+  "scripts": {
+    "start": "tsdx watch",
+    "build": "tsdx build",
+    "test": "tsdx test --passWithNoTests",
+    "lint": "tsdx lint",
+    "prepare": "tsdx build",
+    "size": "size-limit",
+    "analyze": "size-limit --why"
+  },
+  "peerDependencies": {
+    "react": ">=16"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged && npm run typecheck"
+      "pre-commit": "tsdx lint"
     }
   },
-  "lint-staged": {
-    "*.{html,md,less,json}": [
-      "prettier --write"
-    ],
-    "*.ts": "eslint --fix --config .eslintrc"
+  "prettier": {
+    "printWidth": 80,
+    "semi": true,
+    "singleQuote": true,
+    "trailingComma": "es5"
   },
+  "name": "react-fipc",
+  "author": "Evgeny Paromov",
+  "module": "dist/react-fipc.esm.js",
+  "size-limit": [
+    {
+      "path": "dist/react-fipc.cjs.production.min.js",
+      "limit": "10 KB"
+    },
+    {
+      "path": "dist/react-fipc.esm.js",
+      "limit": "10 KB"
+    }
+  ],
   "devDependencies": {
-    "@types/jest": "^25.2.1",
-    "@typescript-eslint/eslint-plugin": "^2.29.0",
-    "@typescript-eslint/parser": "^2.29.0",
-    "coveralls": "^3.1.0",
-    "cz-conventional-changelog": "^3.1.0",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.11.0",
-    "husky": "^4.2.5",
-    "jest": "^25.4.0",
-    "lint-staged": "^10.1.7",
-    "prettier": "^2.0.5",
-    "standard-version": "^7.1.0",
-    "ts-jest": "^25.4.0",
-    "typescript": "^3.8.3"
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
+    "@size-limit/preset-small-lib": "^4.12.0",
+    "@types/react": "^17.0.11",
+    "@types/react-dom": "^17.0.7",
+    "husky": "^6.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "size-limit": "^4.12.0",
+    "tsdx": "^0.14.1",
+    "tslib": "^2.3.0",
+    "typescript": "^4.3.2"
   }
 }
